# CURA_SENSE

./: .env  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  test.txt  verify_fix.py
backend/: config.py  main.py
backend/agents/: __init__.py  graph.py  nodes.py  tools.py
backend/chroma_db/: chroma.sqlite3
backend/data/: error_patterns.json  past_incidents.json  support_tickets.json
backend/data/knowledge_base/: api_authentication.md  payment_integration.md  webhook_setup.md
backend/models/: __init__.py  schemas.py  types.py
backend/routes/: __init__.py  agent.py  chat.py  documents.py  monitor.py  webhooks.py
backend/scripts/: ingest_data.py  ingest_initial.py  test_analyze.py  test_models.py  test_workflow.py  verify_api_full.ps1  verify_async_api.ps1
backend/services/: __init__.py  chain.py  embeddings.py  support_agent.py  vector_store.py
frontend/: index.html  merchant.html  package-lock.json  package.json  support.html  vite.config.js
frontend/public/: merchant-demo.html
frontend/src/: App.jsx  index.css  merchant-main.jsx  support-main.jsx
frontend/src/api/: client.js
frontend/src/components/: AgentDashboard.jsx  ChatInterface.jsx  FileUpload.jsx  LandingPage.jsx  MerchantApp.jsx  MerchantPortal.jsx  MessageBubble.jsx  Orb.jsx
